Beeman and verlet now working for ex1